Fixes and Github Additions

--- a/src/pages/works-ui.html
+++ b/src/pages/works-ui.html
@@ -139,8 +139,8 @@
             </button>
           </div>
 
-          <div class="modal-body" id="dirtyCodeBody">
-            <div class="row mx-0 p-0 mb-1">
+          <div class="modal-body">
+            <div class="row mx-0 p-0 mb-1" id="dirtyCodeBody">
               <div class="col-12 mx-0 p-0">
                 <a
                   href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911709/JamesBootHomepage/works/content/ui/dirtyCode_jhgx5u.png"><img
@@ -154,28 +154,33 @@
                     class="text-dark font-weight-bold effra">/</span> Processes</h2>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/section-1-understanding-citizen-science-best-practices-3149e1d6b644"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> 1: Understanding Citizen
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 1: Understanding Citizen
                   Science</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/citizen-science-step-2-audience-research-57f447291c09"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> 2: Audience Research</a>
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 2: Audience Research</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/citizen-science-step-3-three-ideas-9b5ee16794ee"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> 3: Three Ideas</a>
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 3: Three Ideas</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/citizen-science-step-5-project-description-and-audience-type-cd104b3042c3"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> 4: Project Description and
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 4: Project Description and
                   Audience Type</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/citizen-science-flowchart-a15a661064ed" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> 5: Flowchart</a>
+                  href="https://medium.com/@ryker002/citizen-science-flowchart-a15a661064ed" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 5: Flowchart</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/citizen-science-prototype-user-testing-and-accessibility-965c2b561610"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> 6: User Testing and
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 6: User Testing and
                   Accessibility</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/citizen-science-final-design-b8a0d17ac2a1" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> 7: Final Design</a>
+                  href="https://medium.com/@ryker002/citizen-science-final-design-b8a0d17ac2a1" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> 7: Final Design</a>
               </div>
 
             </div>
@@ -197,8 +202,8 @@
             </button>
           </div>
 
-          <div class="modal-body" id="nursingAppBody">
-            <div class="row mx-0 p-0 mb-1">
+          <div class="modal-body" >
+            <div class="row mx-0 p-0 mb-1" id="nursingAppBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
                 <a
                   href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911519/JamesBootHomepage/works/content/ui/1nurse_mppkbl.png"><img
@@ -232,30 +237,33 @@
                     class="text-dark font-weight-bold effra">/</span> Processes</h2>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/nursing-students-app-brainstorm-for-efficient-paperwork-9a5646739620"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> App Brainstorm for
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> App Brainstorm for
                   Efficient Paperwork</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/nursing-interview-analysis-f0297c5f79e" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Interview Analysis</a>
+                  href="https://medium.com/@ryker002/nursing-interview-analysis-f0297c5f79e" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Interview Analysis</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/how-might-we-nursing-project-sprint-process-42ba9ecd7b8f"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Sprint Process: How Might
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Sprint Process: How Might
                   We?</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="https://medium.com/@ryker002/flow-chart-nursing-project-sprint-process-18d6c1597314"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Flowchart</a>
+                  target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Flowchart</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/user-testing-script-ba81c1917335" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> User Testing Script</a>
+                  href="https://medium.com/@ryker002/user-testing-script-ba81c1917335" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> User Testing Script</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/nursing-app-prototype-964bc222415c" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Prototype</a>
+                  href="https://medium.com/@ryker002/nursing-app-prototype-964bc222415c" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Prototype</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/nursing-testing-the-app-d891eac23c00" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Project Summary</a>
+                  href="https://medium.com/@ryker002/nursing-testing-the-app-d891eac23c00" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Project Summary</a>
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
-                  href="https://medium.com/@ryker002/nursing-app-final-design-3aed5ef9e229?" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Final Design</a>
+                  href="https://medium.com/@ryker002/nursing-app-final-design-3aed5ef9e229?" target="_blank">
+                  <i class="fas fa-book text-c-dark pr-2"></i> Final Design</a>
               </div>
 
             </div>
