--- a/src/pages/works-web.html
+++ b/src/pages/works-web.html
@@ -181,9 +181,12 @@
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="worksweb/interactiveapps-dragqueen/index.html" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                    class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
                 <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
                   mobile devices</p>
+                  <a class="btn btn-dark mx-auto w-100 effra text-left"
+                  href="https://github.com/ryker002/interactiveapps-whatadrag"
+                  target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a>
               </div>
             </div>
             <div class="row mx-0 p-0 mb-1" id="dragBody">
@@ -212,9 +215,12 @@
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/interactiveapps-kiosk/index.html"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                  target="_blank"><span class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
                 <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
                   mobile devices</p>
+                  <a class="btn btn-dark mx-auto w-100 effra text-left"
+                  href="https://github.com/ryker002/interactiveapps-kiosk"
+                  target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a>
               </div>
             </div>
             <div class="row mx-0 p-0 mb-1" id="kioskBody">
@@ -244,12 +250,16 @@
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/webdesign2-beauty/index.html"
-                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                  target="_blank"><span class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
                 <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
                   mobile devices</p>
+                  <a class="btn btn-dark mx-auto w-100 effra text-left"
+                  href="https://github.com/ryker002/WebDesign2-BeautyDesign-Project"
+                  target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1" id="beautydesignBody">
+            <div class="row mx-0 p-0 mb-1">
+              <!-- id="beautydesignBody" -->
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
 
               </div>
@@ -276,9 +286,12 @@
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="http://127.0.0.1:5500/src/pages/worksweb/webdesign2-webfont/" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                    class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
                 <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
                   mobile devices</p>
+                  <a class="btn btn-dark mx-auto w-100 effra text-left"
+                  href="https://github.com/ryker002/WebDesign2-WebFont-Project"
+                  target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a>
               </div>
             </div>
             <div class="row mx-0 p-0 mb-1" id="webfontBody">
@@ -328,7 +341,10 @@
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="http://127.0.0.1:5500/src/pages/worksweb/webdesign2-hierarchy/" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                    class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
+                    <a class="btn btn-dark mx-auto w-100 effra text-left"
+                    href="https://github.com/ryker002/WebDesign2-Hierarchy-Project"
+                    target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a>
               </div>
             </div>
             <div class="row mx-0 p-0 mb-1" id="superherochildrenBody">
@@ -374,9 +390,12 @@
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
                   href="http://127.0.0.1:5500/src/pages/worksweb/webdesign2-nonprofit/" target="_blank"><span
-                    class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                    class="text-c-dark font-weight-bold effra pr-2">/</span> Live Website</a>
                 <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
                   mobile devices</p>
+                  <a class="btn btn-dark mx-auto w-100 effra text-left"
+                  href="https://github.com/ryker002/WebDesign2-NonProfit-Project"
+                  target="_blank"><i class="text-c-dark fab fa-github pr-2"></i> Github</a
               </div>
             </div>
             <div  id="scoutsBody">
