--- a/src/pages/works-graphic.html
+++ b/src/pages/works-graphic.html
@@ -25,7 +25,7 @@
 
     <!-- NAVBAR -->
 
-    <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <!-- <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jNavBar"
             aria-controls="jNavBar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
         </div>
 
 
-    </nav>
+    </nav> -->
 
     <!-- HEADER -->
 
@@ -89,6 +89,16 @@
 
                         <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra"
                             data-wow-delay="0.4s">GRAPHIC DESIGN</h5>
+
+                            <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb bg-dark">
+                                      <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+                                      <li class="breadcrumb-item"><a href="./works-photography.html">Photography</a></li>
+                                      <li class="breadcrumb-item"><a href="./works-ui.html">UI UX Design</a></li>
+                                      <li class="breadcrumb-item"><a href="./works-web.html">Web Development</a></li>
+                                      <li class="breadcrumb-item active" aria-current="page">Graphic Design</li>
+                                    </ol>
+                                  </nav>
                     </div>
 
                 </div>
