--- a/src/pages/works-photography.html
+++ b/src/pages/works-photography.html
@@ -25,7 +25,7 @@
 
     <!-- NAVBAR -->
 
-    <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <!-- <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jNavBar"
             aria-controls="jNavBar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -68,15 +68,17 @@
         </div>
 
 
-    </nav>
+    </nav> -->
 
     <!-- HEADER -->
 
     <div class="view parallax h-50" id="header">
+
         <div class="mask">
 
             <div class="container flex-center ">
                 <div id="particle"></div>
+                
                 <div class="row mt-5">
                     <div class="col-md-12 wow fadeIn mb-3">
                         <h1 class="display-3 mb-2 wow fadeInDown text-light effra d-md-block d-none"
@@ -89,6 +91,16 @@
 
                         <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra"
                             data-wow-delay="0.4s">PHOTOGRAPHY</h5>
+                        
+                            <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb bg-dark">
+                                      <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+                                      <li class="breadcrumb-item active" aria-current="page">Photography</li>
+                                      <li class="breadcrumb-item"><a href="./works-ui.html">UI UX Design</a></li>
+                                      <li class="breadcrumb-item"><a href="./works-web.html">Web Development</a></li>
+                                      <li class="breadcrumb-item"><a href="./works-graphic.html">Graphic Design</a></li>
+                                    </ol>
+                                  </nav>
                     </div>
 
                 </div>
