--- a/src/pages/works-web.html
+++ b/src/pages/works-web.html
@@ -25,7 +25,7 @@
 
   <!-- NAVBAR -->
 
-  <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <!-- <nav id="jNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jNavBar" aria-controls="jNavBar"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
     </div>
 
 
-  </nav>
+  </nav> -->
 
   <!-- HEADER -->
 
@@ -88,6 +88,18 @@
 
             <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra" data-wow-delay="0.4s">WEB
               DEVELOPMENT</h5>
+
+              <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb bg-dark">
+                    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+
+                    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="./works-photography.html">Photography</a></li>
+                    <li class="breadcrumb-item"><a href="./works-ui.html">UI UX Design</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Web Development</li>
+                    <li class="breadcrumb-item"><a href="./works-graphic.html">Graphic Design</a></li>
+                  </ol>
+                </nav>
           </div>
 
         </div>
