Github doesn't support PHP. Opps.

--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                     situation
                     and to keep myself calm, and composed even with an otherwise stressful deadline.</p>
                 <hr class="my-4 bg-light">
-                <div class="row">
+                <!-- <div class="row">
                     <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
                             class="text-dark font-weight-bold effra">/</span> Contact Me</h1>
-                </div>
+                </div> -->
                 <div class="row mt-5">
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="card border-0 shadow-lg bg-dark text-light js-tilt js-tilt-glare" data-tilt>
                             <div class="card-body">
                                 <h4 class="card-title display-5 text-uppercase effra">Email</h4>
@@ -287,9 +287,9 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="card border-0 shadow-lg bg-dark text-light js-tilt js-tilt-glare" data-tilt>
                             <div class="card-body">
                                 <h4 class="card-title display-5 text-uppercase effra">Phone Number</h4>
@@ -299,8 +299,8 @@
 
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
+                    </div> -->
+                    <div class="col-md-8 col-12">
                             <button type="button" class="btn btn-dark js-tilt js-tilt-glare" data-toggle="modal" data-target=".bd-example-modal-lg">Contact Me</button>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                               </button>
                           </div>
                           <div class="modal-body" id="adoptiondayBody">
-                                <form id="contact-form" method="post" action="contact.php" role="form">
+                                <form id="contact-form" action="https://formspree.io/james@lewandowski.design" method="POST" role="form">
 
                                         <div class="messages"></div>
                                     
