--- a/index.html
+++ b/index.html
@@ -320,24 +320,17 @@
                               </button>
                           </div>
                           <div class="modal-body" id="adoptiondayBody">
-                                <form id="contact-form" action="https://formspree.io/james@lewandowski.design" method="POST" role="form">
+                                <form method="POST" action="https://formspree.io/james@lewandowski.design">
 
                                         <div class="messages"></div>
                                     
                                         <div class="controls">
                                     
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-12">
                                                     <div class="form-group">
                                                         <label for="form_name" class="text-light effra text-uppercase font-weight-bold">Firstname *</label>
-                                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-                                                        <div class="help-block with-errors"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label for="form_lastname" class="text-light effra text-uppercase font-weight-bold">Lastname *</label>
-                                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                                                        <input id="form_name" class="form-control" type="text" name="name" placeholder="Your Name" required="required" data-error="Name is required.">
                                                         <div class="help-block with-errors"></div>
                                                     </div>
                                                 </div>
@@ -346,14 +339,14 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="form_email" class="text-light effra text-uppercase font-weight-bold">Email *</label>
-                                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                                                        <input id="form_email" class="form-control" type="email" name="email" placeholder="Your email" required="required" data-error="Email is required">
                                                         <div class="help-block with-errors"></div>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="form_phone" class="text-light effra text-uppercase font-weight-bold">Phone</label>
-                                                        <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                                                        <input id="form_phone" class="form-control" type="tel" name="number" placeholder="Your number">
                                                         <div class="help-block with-errors"></div>
                                                     </div>
                                                 </div>
@@ -362,7 +355,7 @@
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label for="form_message" class="text-light effra text-uppercase font-weight-bold">Message *</label>
-                                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                                        <textarea id="form_message" class="form-control" name="message" placeholder="Your message" required="required" data-error="A message is required"></textarea>
                                                         <div class="help-block with-errors"></div>
                                                     </div>
                                                 </div>
