--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="form-group">
-                                                        <label for="form_name" class="text-light effra text-uppercase font-weight-bold">Firstname *</label>
+                                                        <label for="form_name" class="text-light effra text-uppercase font-weight-bold">Name *</label>
                                                         <input id="form_name" class="form-control" type="text" name="name" placeholder="Your Name" required="required" data-error="Name is required.">
                                                         <div class="help-block with-errors"></div>
                                                     </div>
