--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
                         src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903536/JamesBootHomepage/homepageCards/photographyCard.jpg"
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fas fa-camera fa-md text-dark"></i> Photography</h4>
+                        <h6 class="card-title display-5 text-uppercase effra responsive-text  d-none d-lg-block"><i
+                                class="fas fa-camera fa-md text-dark pr-2"></i> Photography</h6>
+                                <h4 class="card-title display-5 text-uppercase effra responsive-text d-block d-lg-none"><i
+                                    class="fas fa-camera fa-md text-dark pr-2"></i> Photography</h4>
                         <p class="card-text text-light">Photoshoots and Projects
                             <a type="button" href="/src/pages/works-photography.html"
                                 class="btn btn-dark ml-5 float-right">See
@@ -150,8 +152,10 @@
                         src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903683/JamesBootHomepage/homepageCards/uiCard.png"
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fab fa-sketch fa-md text-dark"></i> User Interface</h4>
+                        <h6 class="card-title display-5 text-uppercase effra responsive-text  d-none d-lg-block"><i
+                                class="fab fa-sketch fa-md text-dark pr-2"></i> User Interface</h6>
+                                <h4 class="card-title display-5 text-uppercase effra responsive-text d-block d-lg-none"><i
+                                    class="fab fa-sketch fa-md text-dark pr-2"></i> User Interface</h4>
                         <p class="card-text text-light">User Interface and User Exprience Designs
                             <a type="button" href="/src/pages/works-ui.html" class="btn btn-dark ml-5 float-right">See
                                 More</a></p>
@@ -165,8 +169,10 @@
                         src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903684/JamesBootHomepage/homepageCards/webCard.png"
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fas fa-file-code fa-md text-dark"></i> Web Development</h4>
+                        <h6 class="card-title display-5 text-uppercase effra responsive-text d-none d-lg-block"><i
+                                class="fas fa-file-code fa-md text-dark pr-2"></i> Web Development</h6>
+                        <h4 class="card-title display-5 text-uppercase effra responsive-text d-block d-lg-none"><i
+                                class="fas fa-file-code fa-md text-dark pr-2"></i> Web Development</h4>
                         <p class="card-text text-light">Web Projects and Creations<a type="button"
                                 href="/src/pages/works-web.html" class="btn btn-dark ml-5 float-right">See More</a>
                         </p>
@@ -180,8 +186,10 @@
                         src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903685/JamesBootHomepage/homepageCards/designCard.png"
                         alt="">
                     <div class="card-body tild-3d">
-                        <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fab fa-adobe fa-md text-dark"></i> Graphic Design</h4>
+                        <h6 class="card-title display-5 text-uppercase effra responsive-text  d-none d-lg-block"><i
+                                class="fab fa-adobe fa-md text-dark pr-2"></i> Graphic Design</h6>
+                                <h4 class="card-title display-5 text-uppercase effra responsive-text d-block d-lg-none"><i
+                                    class="fab fa-adobe fa-md text-dark pr-2"></i> Graphic Design</h4>
                         <p class="card-text text-light">Graphic Design and Illustrative Projects<a type="button"
                                 href="/src/pages/works-graphic.html" class="btn btn-dark ml-5 float-right">See More</a>
                         </p>
@@ -340,18 +348,10 @@
         </div>
     </div>
 
-    <div id="root"></div>
-
-
-
-
-    <!-- React -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <!-- Babel -->
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Jquery Script -->
     <script type="text/javascript" src="/src/js/jquery-3.4.1.min.js"></script>
+    <!-- Responsive Text -->
+    <script type="text/javascript" src="/src/js/jquery.responsivetext.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="/src/js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
